# prolog-tools

./: Prolog2PrologSolve.hs  PrologSuccessPatterns.hs  narradar-prolog-tools.cabal  prolog-tools.cabal  testLFP.hs
Language/Prolog/: ModeAnalysis.hs  PreInterpretation.hs  Representation.hs  SharingAnalysis.hs  Signature.hs  Transformations.hs  TypeChecker.hs  Utils.hs
