name: narradar-prolog-tools
version: 0.3
Cabal-Version:  >= 1.4
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Jose Iborra, All Rights Reserved
maintainer: pepeiborra@gmail.com
homepage:
synopsis: Some Prolog related tools
description: Some Prolog related tools
category: Prolog
author: Jose Iborra
extra-source-files:  prelude.pl

Library
  buildable: True
  build-depends: base > 3 && < 5,
                 narradar-term >= 0.3,
                 bifunctors,
                 narradar-prolog >= 0.3,
                 containers,
                 mtl, 
                 narradar-alacarte,
                 control-monad-free >= 0.4,
                 template-haskell,
                 bytestring,
                 prettyclass,
                 parsec,
                 process,
                 directory,
                 filepath,
                 array
  exposed-modules:
     Language.Prolog.Signature
     Language.Prolog.SharingAnalysis
--     Language.Prolog.ModeAnalysis
     Language.Prolog.Representation
--     Language.Prolog.PreInterpretation
     Language.Prolog.Transformations
  other-modules:
     Language.Prolog.Utils
  extensions: CPP

  if impl(ghc > 6.12)
     Extensions: DeriveFunctor, DeriveFoldable, DeriveTraversable, StandaloneDeriving
     cpp-options: -DGHC612
  else
     build-depends: derive > 2
     cpp-options: -DDERIVE

Executable prolog2prologSolve
  buildable: False
  build-depends: base, narradar-prolog, prettyclass, parsec
  main-is: Prolog2PrologSolve.hs

  if impl(ghc > 6.12)
     Extensions: DeriveFunctor, DeriveFoldable, DeriveTraversable, StandaloneDeriving
     cpp-options: -DGHC612
  else
     build-depends: derive > 2
     cpp-options: -DDERIVE

Executable prologSuccessPatterns
  buildable: False
  build-depends: base, narradar-prolog, prettyclass, filepath, process, directory, array
  main-is: PrologSuccessPatterns.hs

  if impl(ghc > 6.12)
     Extensions: DeriveFunctor, DeriveFoldable, DeriveTraversable, StandaloneDeriving
     cpp-options: -DGHC612
  else
     build-depends: derive > 2
     cpp-options: -DDERIVE
