name: prolog-tools
version: 0.1.20091214
Cabal-Version:  >= 1.4
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright: Jose Iborra, All Rights Reserved
maintainer: pepeiborra@gmail.com
homepage:
synopsis: Some Prolog related tools
description: Some Prolog related tools
category: Prolog
author: Jose Iborra
extra-source-files:  prelude.pl

Library
  buildable: True
  build-depends: base > 3 && < 5,
                 term >= 0.1.20090915,
                 prolog,
                 containers,
                 mtl, 
                 alacarte,
                 control-monad-free >= 0.4,
                 template-haskell,
                 bytestring,
                 prettyclass,
                 parsec,
                 process,
                 directory,
                 filepath,
                 array
  exposed-modules:
     Language.Prolog.Signature
     Language.Prolog.SharingAnalysis
--     Language.Prolog.ModeAnalysis
     Language.Prolog.Representation
     Language.Prolog.PreInterpretation
     Language.Prolog.Transformations
  other-modules:
     Language.Prolog.Utils

Executable prolog2prologSolve
  buildable: True
  build-depends: base, prolog, prettyclass, parsec
  main-is: Prolog2PrologSolve.hs

Executable prologSuccessPatterns
  buildable: True
  build-depends: base, prolog, prettyclass, filepath, process, directory, array
  main-is: PrologSuccessPatterns.hs
